# calendar-app-mcp

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  calendar-app  calendar-events.py  pyproject.toml
calendar_app/: __init__.py  __main__.py  cli.py
calendar_app/models/: __init__.py  event_store.py  formatters.py
calendar_app/renderers/: __init__.py  calendar_list.py  markdown.py
calendar_app/tools/: __init__.py  mcp_server.py
calendar_app/utils/: __init__.py  date_utils.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_cli.py
tests/unit/models/: test_formatters.py
tests/unit/renderers/: test_calendar_list.py  test_markdown.py
tests/unit/tools/: test_mcp_server.py  test_time_tools.py
tests/unit/utils/: test_date_utils.py  test_timezone_utils.py
