[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calendar-app-mcp"
version = "0.1.5"
description = "Calendar app MCP for accessing macOS Calendar events and reminders"
readme = "README.md"
requires-python = ">= 3.12"
license = {text = "MIT"}
authors = [
    {name = "Ryan Wooden", email = "rygwdn@gmail.com"},
]
keywords = ["calendar", "mcp", "macos", "claude", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pyobjc-framework-EventKit>=11.0",
    "fastmcp>=2.2.0",
    "jinja2>=3.1.6",
]

[project.urls]
"Homepage" = "https://github.com/rygwdn/calendar-app-mcp"
"Bug Tracker" = "https://github.com/rygwdn/calendar-app-mcp/issues"
"Source Code" = "https://github.com/rygwdn/calendar-app-mcp"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
    "black>=25.1.0",
    "pytest-black>=0.6.0",
    "pytest-ruff>=0.4.1",
    "build>=1.2.2",
    "twine>=6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["calendar_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests", 
    "black: run the black formatter on all Python files",
    "ruff: run the ruff linter on Python files",
]

[tool.coverage.run]
source = ["calendar_app"]
omit = ["*/__init__.py", "*/__main__.py"]

# This makes the package accessible via `uv run`
[project.scripts]
calendar-app = "calendar_app.cli:main"
calendar-app-mcp = "calendar_app.cli:main"

# Override the extra-index-url from the global config
[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = []
index-strategy = "unsafe-best-match"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "EM", "Q", "T20", "UP", "ANN", "FLY", "LOG", "RUF", "SIM"]
ignore = [
    "ANN001", "ANN101", "ANN102", "ANN201", "ANN202", "ANN204", "ANN401",  # Allow missing type annotations
    "T201",  # Allow print statements
    "B904",  # Allow raise without from
    "EM101", "EM102",  # Allow string literals in exceptions
    "E501",  # Allow long lines
    "RUF013"  # Allow implicit Optional
]

[tool.ruff.lint.isort]
known-first-party = ["calendar_app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S", "T", "E", "W", "F", "I", "SIM", "F4", "F8"]

